<resources>
    <string name="app_name">Medical Waste management System</string>
    <string name="title_name">Medical Waste management System</string>
    <string name="contact_number">070&#8211;4632&#8211;7024</string>
    <string name="left_contents_header">저울 무게</string>
    <string name="now_weight_number">0.00</string>
    <string name="weight_unit">kg</string>
    <string name="total_weight_header">누적 합계</string>
    <string name="select_weight_header">조 회</string>
    <string name="begin_date_label">시 작 일</string>
    <string name="end_date_label">종 료 일</string>
    <string name="total_weight_label">합계</string>
    <string name="total_weight">0.00</string>
    <string name="none">none</string>
</resources>