<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_now_weight_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weight_scale_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/rect_now_weight_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rect_transparent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/none" />

        <TextView
            style="@style/Font_NowWeightHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/left_contents_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/now_weight_number"
        style="@style/Font_NowWeightNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:text="@string/now_weight_number"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/now_weight_unit"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_scale_header"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/now_weight_unit"
        style="@style/Font_NowWeightUnit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/weight_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toEndOf="@+id/now_weight_number"
        app:layout_constraintTop_toBottomOf="@+id/weight_scale_header"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>