<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_total_weight_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_weight_header"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/rect_total_weight_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rect_transparent"
            android:contentDescription="@string/none"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Font_TotalWeightHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/total_weight_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/total_weight_number"
        style="@style/Font_SelectedTotalWeightNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/total_weight"
        android:gravity="center"
        app:layout_constraintHorizontal_weight="0.13"
        app:layout_constraintTop_toBottomOf="@+id/select_weight_header"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/total_weight_unit"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/total_weight_unit"
        style="@style/Font_SelectedTotalWeightUnit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/weight_unit"
        android:gravity="center"
        app:layout_constraintHorizontal_weight="0.04"
        app:layout_constraintTop_toBottomOf="@+id/select_weight_header"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toRightOf="@+id/total_weight_number"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>